<resources>
    <string name="app_name">CarAssist</string>
    <string name="action_settings">Settings</string>
    <string name="ip_setting">Devices</string>
    <string name="dvr_device">＋</string>
    <string name="refresh">Refresh</string>
    <string name="up_folder">Up</string>
    <string name="multiple">Select</string>
    <string name="cancel_multiple">Cancel Select</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="show_tip">Show Tips Again</string>
    <string name="setting_volume">Volume of DVR</string>
    <string name="setting_brightness">Brightness of DVR</string>
    <string name="setting_wake_up">Sensity of Voice Wakeup</string>
    <string name="volume_and_brightness">Volume and Brightness</string>
    <string name="setting_wake_up_close">Close</string>
    <string name="setting_wake_up_low">Low</string>
    <string name="setting_wake_up_mid">Middle</string>
    <string name="setting_wake_up_high">High</string>
    <string name="open_file">Open</string>
    <string name="download_file">Download</string>
    <string name="cancel_download">Cancel DownLoad</string>
    <string name="delete_file">Delete</string>
    <string name="cancle_file">Cancel</string>
    <string name="share_flie">Share</string>
    <string name="tip_preview">Camera Preview</string>
    <string name="preview_record">Video</string>
    <string name="preview_photo">Photo</string>
    <string name="tip_softap_open">SoftAP Have Opened</string>
    <string name="tip_softap_close">SoftAP Have Closed</string>
    <string name="tip_connected">Connected</string>
    <string name="tip_no_connect">No Connection</string>
    <string name="tip_connecting">Connecting</string>
    <string name="no_recorder">No found devices</string>
    <string name="tip_delete_success">Delete Successfully</string>
    <string name="tip_delete_fail">Delete Unsuccessfully</string>
    <string name="tip_download_success">Download Successfully</string>
    <string name="tip_download_fail">Download Unsuccessfully</string>
    <string name="tip_deleting_file">Deleting Files</string>
    <string name="tip_newversion_title">Version Upgrading</string>
    <string name="tip_newversion_message">New version found, download now?</string>
    <string name="tip_newversion_downloading">Downloading</string>
    <string name="tip_newversion_download_quiet">Downloading in background</string>
    <string name="tip_newversion_download_fail">Update failed</string>
    <string name="control_cling_title" >Me</string>
    <string name="control_cling_item" >After bind the recorder device, you can take picture or video remotely, or view history GPS track.</string>
    <string name="preview_cling_title" >DVR(Digital Video Recorder)</string>
    <string name="preview_cling_item" >Preview DVR\'s cameras, take picture and change the DVR setting.\nDownload video and photo from DVR through WiFi.\nHave to keep your device and phone in the same WiFi network.</string>
    <string name="car_cling_title" >Car Life</string>
    <string name="car_cling_item" >Share DVR\'s video and photo to people</string>
    <string name="phone_cling_title" >Phone Files</string>
    <string name="phone_cling_item" >Here is the videos and pictures downloaded from recorder.\nClicking to open，long press to share or delete.</string>
    <string name="cling_dismiss" >OK</string>
    <string name="title_about" >CarAssist</string>
    <string name="about" >About</string>
    <string name="version_name" >Version:</string>
    <string name="can_not_find_version_name" >Can not get version!</string>
    <string name="sd_unmount" >Recorder has not SD,can not preview!</string>
    <string name="ok" >OK</string>
    <string name="install_message">Downloaded the latest version, install now?</string>
    <string name="lastest_version">It\'s already the latest version!</string>
    <string name="cancel">Cancel</string>
    <string name="check_upate">Check New Version</string>
    <string name="upgrade">Upgrade</string>
    <string name="send">Send</string>
    <string name="no_address">No address inputed</string>
    <string name="hint_input">Please input navigation address</string>
    <string name="quit_title">Confirm</string>
    <string name="quit_message">Do you want to quit CarAssist?</string>
    <string name="title_select_point">Select Point</string>
    <string name="ok_select_point">Confirm</string>
    <string name="cancel_select_point">Cancel</string>
    <string name="query_message">Searching, please hold on...</string>
    <string name="address_error">Can not get the detail of this address</string>
    <string name="alarm_detail">Alarm Detail</string>
    <string name="alarm_device">Device Name</string>
    <string name="alarm_title">Alarm Content</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="alarm_map_info">Location</string>
    <string name="alarm_front_capture">Picture From Front Camera</string>
    <string name="alarm_rear_capture">Picture From Rear Camera</string>
    <string name="alarm_capture_downloading">Downloading</string>
    <string name="alarm_capture_none">None</string>
    <string name="tab_car_life">Car Life</string>
    <string name="tab_preview">DVR</string>
    <string name="tab_phone_file">Phone Files</string>
    <string name="tab_cloud">Me</string>
    <string name="login_weixin">Login WeChat</string>
    <string name="login_weixin_tip">Please use WeChat to login</string>
    <string name="logout">Logout</string>
    <string name="relogin">Relogin</string>
    <string name="device_fragment">Device Management</string>
    <string name="track_fragment">GPS Track History</string>
    <string name="monitor_fragment">Monitor and Alarm</string>
    <string name="setting_fragment">Setting</string>
    <string name="driver_score_fragment">Driver Score</string>
    <string name="pickup_fragment">Smart Pickup</string>
    <string name="message_fragment">Send Message</string>
    <string name="datacard_fragment">Datacard Management</string>
    <string name="appointment_fragment">Navigation Plan</string>
    <string name="delete">Delete</string>
    <string name="tip_device">Binded Devices(Select one as default)</string>
    <string name="tip_bond">Bind a new one</string>
    <string name="scan">Scan devices</string>
    <string name="add_device">Add device</string>
    <string name="hint_serial">Please input serial number of device</string>
    <string name="no_name">Nonamed</string>
    <string name="scan_text">Scan the DVR QR code</string>
    <string name="scan_title">QR Code Scanning</string>
    <string name="message_device">Device</string>
    <string name="hint_message_adit">Please input your text message</string>
    <string name="message_send">Send</string>
    <string name="pickup_send">Send to my friends of WeChat</string>
    <string name="voice_button">Normal</string>
    <string name="setting_button">Quick Setting</string>
    <string name="track_button">Tracks</string>
    <string name="file_button">DVR Files</string>
    <string name="voice_tip">Voice</string>
    <string name="monitor_title">Important Events</string>
    <string name="monitor_image">Photo\nCapture</string>
    <string name="monitor_video">Video\nCapture</string>
    <string name="monitor_live_preview">Live\nPreview</string>
    <string name="topbar_share">Share</string>
    <string name="time">00:00</string>
    <string name="lock_file">Locked</string>
    <string name="capture_file">Captured</string>
    <string name="loop_file">Looping</string>
    <string name="edit_file">Modified</string>
    <string name="capture_short_video">10s Video Capture</string>
    <string name="capture_short_video_time">%1$ds Video Capture</string>
    <string name="capture_complete">Capture completed, saved to \'Phone Files\'</string>
    <string name="playback">Play</string>
    <string name="no_file">No image or video</string>
    <string name="setting_camera">Setting for video of monitor</string>
    <string name="setting_camera_picture">Resolution for picture of monitor</string>
    <string name="setting_camera_video">Time length for video of monitor</string>
    <string name="setting_suggest">Suggestions and Feedback</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="share_video_title">Editing</string>
    <string name="send_video_title">Submit</string>
    <string name="share_video_origial">Raw Audio</string>
    <string name="share_video_origial_music">Music</string>
    <string name="save">Draft</string>
    <string name="synchronization">Share to</string>
    <string name="hint_send_video">Please input comment</string>
    <string name="max_120_word">120 characters</string>
    <string name="edit_conver">Drag the red line to choose cover</string>
	<string name="postdetail_views">%1$d views</string>
    <string name="postdetail_authorinfo">Author：</string>
    <string name="postlist_count_zero">No posts</string>
    <string name="post_network_error">Network error</string>
    <string name="post_image_video_share">Share</string>
    <string name="post_image_video_comment">&#160;%1$d</string>
    <string name="post_image_video_up">&#160;%1$d</string>
    <string name="post_image_video_delete">Delete</string>
    <string name="post_image_video_view">&#160; views</string>
    <string name="post_empty_view_loading">Loading...</string>
    <string name="post_view_time_inside2">A moment ago</string>
    <string name="post_view_time_inside60"> minutes ago</string>
    <string name="post_view_time_insidetoday">Today</string>
    <string name="post_view_time_insideyesterday">Yesterday</string>
    <string name="delete_postitem_confirm">Delete your post?</string>
    <string name="post_share_user_default">CarAssist user</string>
    <string name="post_share_to_msg"> send your a link</string>
    <string name="post_share_user_title">【CarAssist】</string>
    <string name="failed_image">Taking photo failed</string>
    <string name="fetching_image">Fetching image now...</string>
    <string name="fetching_video">Fetching video now...</string>
    <string name="image_capture_done">Notication coming soon</string>
    <string name="video_capture_done">Notication coming soon</string>
    <string name="image_capture_error">Failed to capture, please try again</string>
    <string name="show_image">Viewing the image?</string>
    <string name="del_item">Are you sure you want to delete this item</string>
    <string name="forum_type_paipai">Forum</string>
    <string name="forum_type_scenery">Sight</string>
    <string name="forum_type_accident">Accident</string>
    <string name="seek_error_nostorage">No storage exists</string>
    <string name="seek_error_seek">Seek failed</string>
    <string name="seek_error_playback">Playback failed</string>
    <string name="seek_switch_playback">Switch to playback mode</string>
    <string name="seek_switch_preview">Switch to preview mode</string>
    <string name="seek_start_first">Please start preview firstly</string>
    <string name="crash_tip">An error occurred</string>
    <string name="share_tips">Choose a way to share your files</string>
    <string name="send_friend">to your friends</string>
    <string name="tip_bond_scan_device">Way 1:\nSteps:Start-Setting-CarAssist-QR Code Scanning</string>
    <string name="tip_bond_scan_device_1">Download APP</string>
    <string name="tip_bond_scan_device_2">Bind Device</string>
    <string name="tip_bond_scan_device_manual">Way 2:\nSteps:Keep phone and device in the same WiFi network</string>
    <string name="downloading_file">Downloading</string>
    <string name="file_tip">DVR Files</string>
    <string name="how_to_bond"><u>How to bind device</u></string>
    <string name="map_tip">Living</string>
    <string name="no_bond_device">No binded device</string>
</resources>